Shippable builds Docker images

--- a/docker/ansible/Dockerfile
+++ b/docker/ansible/Dockerfile
@@ -1,16 +1,5 @@
 # https://registry.hub.docker.com/u/evgenyg/ansible/
 
 FROM ubuntu:14.04
-
-RUN apt-get update  -y
-RUN apt-get upgrade -y
-RUN apt-get install -y vim htop python-pip python-dev
-RUN pip install ansible==1.7.1
-RUN apt-get purge   -y python-dev
-
-RUN mkdir -p         /etc/ansible
-RUN echo localhost > /etc/ansible/hosts
-
-RUN ansible          --version
-RUN ansible-playbook --version
-RUN ansible localhost -c local -m setup
+ADD  docker /docker
+RUN  /docker/ansible/install-ansible.sh
