--- a/shippable.yml
+++ b/shippable.yml
@@ -10,6 +10,7 @@ branches:
 script:
  - ./shippable.sh
 
-commit_container: evgenyg/ansible:1.7.1
-commit_container: evgenyg/jenkins
-commit_container: evgenyg/packer
+commit_container:
+  - evgenyg/ansible:1.7.1
+  - evgenyg/jenkins
+  - evgenyg/packer
