apt module use update - force=yes

--- a/playbooks/roles/ansible/tasks/main.yml
+++ b/playbooks/roles/ansible/tasks/main.yml
@@ -1,5 +1,5 @@
 ---
-- apt:  name={{item}} state=latest
+- apt:  name={{item}} state=latest force=yes
   with_items:
     - python-pip
     - python-dev
