--- a/playbooks/roles/docker/tasks/main.yml
+++ b/playbooks/roles/docker/tasks/main.yml
@@ -3,7 +3,7 @@
 
 - apt_key: keyserver=hkp://keyserver.ubuntu.com:80 id=36A1D7869245C8950F966E92D8576A8BA88D21E9
 - apt_repository: repo='deb https://get.docker.io/ubuntu docker main' update_cache=yes
-- apt: name=lxc-docker
+- apt: name=lxc-docker force=yes
 
 - command:  docker --version
   register: docker_version
