--- a/playbooks/roles/mysql/tasks/main.yml
+++ b/playbooks/roles/mysql/tasks/main.yml
@@ -26,7 +26,7 @@
 - command:  mysql --version
   register: mysql_version
 
-- debug: var=mysql_version
+- debug: var=mysql_version.stdout
 
 - assert:
     that:
