Node.js role update

--- a/playbooks/roles/node.js/tasks/main.yml
+++ b/playbooks/roles/node.js/tasks/main.yml
@@ -5,8 +5,12 @@
     - npm
 
 - file:
-    src:   "{{ npm.node_src  }}"
-    dest:  "{{ npm.node_dest }}"
+    path:  /usr/bin/nodejs
+    state: file
+
+- file:
+    src:   /usr/bin/nodejs
+    dest:  /usr/bin/node
     state: link
 
 - command: node --version
