--- a/playbooks/jenkins-ubuntu.yml
+++ b/playbooks/jenkins-ubuntu.yml
@@ -14,7 +14,7 @@
     - { role: periodic-before, period: "{{ 24 * 3600 }}" }
     - { role: base,    when: periodic }
     - { role: ansible, when: periodic }
-    - { role: npm,     when: periodic }
+    - { role: node.js, when: periodic }
     - java
     - jenkins
     - periodic-after
