--- a/playbooks/roles/node.js/tasks/main.yml
+++ b/playbooks/roles/node.js/tasks/main.yml
@@ -1,6 +1,11 @@
 ---
 - apt: name={{ item }} state=latest force=yes
   with_items:
+    - nodejs-dev
+  when: is_docker
+
+- apt: name={{ item }} state=latest force=yes
+  with_items:
     - nodejs
     - npm
 
