--- a/playbooks/packer-ubuntu.yml
+++ b/playbooks/packer-ubuntu.yml
@@ -14,9 +14,10 @@
     - { role: periodic-before, period: "{{ 24 * 3600 }}" }
     - { role: base,       when: periodic }
     - { role: ansible,    when: periodic }
-    - { role: docker,     when: "( periodic|bool and ( not is_docker|bool ))" }
-    - { role: vagrant,    when: periodic }
-    - { role: virtualbox, when: periodic }
-    - { role: ruby,       when: periodic }
-    - packer
+    # - { role: docker,     when: "( periodic|bool and ( not is_docker|bool ))" }
+    # - { role: vagrant,    when: periodic }
+    # - { role: virtualbox, when: periodic }
+    # - { role: ruby,       when: periodic }
+    - ruby
+    # - packer
     - periodic-after
