Ruby role - installs gems

--- a/playbooks/roles/ruby/tasks/main.yml
+++ b/playbooks/roles/ruby/tasks/main.yml
@@ -37,3 +37,11 @@
 - template:
     src:  ruby.sh
     dest: /etc/profile.d
+
+- command:  "'{{ ruby_bin }}/gem' --version"
+- gem:
+    executable: "{{ ruby_bin }}/gem"
+    name:       "{{ item.key }}"
+  with_dict:    ruby.gems
+- command:      "{{ item.value }}"
+  with_dict:    ruby.gems
