--- a/playbooks/vars/Ubuntu.yml
+++ b/playbooks/vars/Ubuntu.yml
@@ -1,8 +1,9 @@
 ---
 ubuntu: {
-  home_dir: /home,
-  env_file: /etc/environment,
-  init_dir: /etc/init.d,
-  log_dir:  /var/log,
-  pid_dir:  /var/run,
+  home_dir:  /home,
+  env_file:  /etc/environment,
+  init_dir:  /etc/init.d,
+  log_dir:   /var/log,
+  pid_dir:   /var/run,
+  envs_dir:  /etc/profile.d # https://help.ubuntu.com/community/EnvironmentVariables
 }
