--- a/playbooks/roles/asgard/tasks/main.yml
+++ b/playbooks/roles/asgard/tasks/main.yml
@@ -19,7 +19,7 @@
     state: directory
     owner: "{{ asgard.user }}"
     group: "{{ asgard.group }}"
-    mode:  0755
+    mode:  "{{ common.mode.directory }}"
 
 - name: Create Asgard log dir
   file:
@@ -27,7 +27,7 @@
     state: directory
     owner: "{{ asgard.user }}"
     group: "{{ asgard.group }}"
-    mode:  0755
+    mode:  "{{ common.mode.directory }}"
 
 - name: Create Asgard config
   template:
@@ -38,15 +38,11 @@
 
 - name: Create Asgard init script
   template:
-    src:  asgard
-    dest: "{{ ubuntu.init_dir }}"
+    src:   asgard
+    dest:  "{{ ubuntu.init_dir }}"
     owner: root
     group: root
-
-- name: Chmod Asgard init script
-  file:
-    path:  "{{ ubuntu.init_dir }}/asgard"
-    mode:  0755
+    mode:  "{{ common.mode.script }}"
 
 # http://docs.aws.amazon.com/AWSSdkDocsJava/latest/DeveloperGuide/credentials.html
 # http://docs.aws.amazon.com/cli/latest/userguide/cli-chap-getting-started.html
@@ -56,7 +52,7 @@
     state: directory
     owner: "{{ asgard.user }}"
     group: "{{ asgard.group }}"
-    mode:  0755
+    mode:  "{{ common.mode.directory }}"
 
 - name: Create AWS credentials file
   template:
@@ -64,7 +60,7 @@
     dest:  "{{ asgard.user_home }}/.aws"
     owner: "{{ asgard.user }}"
     group: "{{ asgard.group }}"
-    mode:  0600
+    mode:  "{{ common.mode.secret }}"
 
 # CloudNative Bakery bake - https://bakery.cloudnative.io/
 # 'artifacts' is sent as external variable, it contains Jenkins artifacts URL
