--- a/playbooks/roles/jenkins/tasks/main.yml
+++ b/playbooks/roles/jenkins/tasks/main.yml
@@ -20,7 +20,7 @@
     dest:  "{{ jenkins.home }}"
     owner: jenkins
     group: jenkins
-    mode:  0644
+    mode:  "{{ common.mode.file }}"
   with_items:
     - config.xml
     - hudson.plugins.s3.S3BucketPublisher.xml
@@ -31,7 +31,7 @@
     state: directory
     owner: jenkins
     group: jenkins
-    mode:  0755
+    mode:  "{{ common.mode.directory }}"
   with_items: jenkins.jobs
   when: ( jenkins.jobs | default([]))
 
@@ -48,7 +48,7 @@
     state: directory
     owner: jenkins
     group: jenkins
-    mode:  0755
+    mode:  "{{ common.mode.directory }}"
 
 - name: Jenkins plugins - install latest version
   with_dict: jenkins.plugins.install | default({})
