--- a/playbooks/roles/packer/tasks/main.yml
+++ b/playbooks/roles/packer/tasks/main.yml
@@ -1,4 +1,8 @@
 ---
+- set_fact:
+    packer_version: "{{ packer.version | calculate( packer ) }}"
+- debug: var=packer_version
+
 - include_vars: aws.yml
   when: packer_store_aws_credentials
 
@@ -17,29 +21,12 @@
     - AWS_SECRET_ACCESS_KEY={{ AWS_SECRET_ACCESS_KEY }}
   when: packer_store_aws_credentials
 
-- name: Calculate Packer latest version
-  shell:    curl {{ packer.packages_url }} | grep packer | grep linux | tail -1 | cut -d_ -f5
-  register: packer_latest_version
-  when:     packer.version == 'latest'
-
-- debug: var=packer_latest_version.stdout
-  when:  packer.version == 'latest'
-
-- set_fact: packer_version={{ packer_latest_version.stdout }}
-  when: packer.version == 'latest'
-
-- set_fact: packer_version={{ packer.version }}
-  when: packer.version != 'latest'
-
-- debug: var=packer_version
-
 - name: Calculate Packer download URL
   set_fact:
-    url:      "{{ packer.download_url.replace( '<version>', packer_version ).replace( '<platform>', packer.platform ) }}"
-    local_zip: "/opt/packer-{{ packer_version }}-{{ packer.platform }}.zip"
+    download_url: "{{ packer.download_url.replace( '<version>', packer_version ).replace( '<platform>', packer.platform ) }}"
+    local_zip:    "/opt/packer-{{ packer_version }}-{{ packer.platform }}.zip"
 
-- debug: var=url
-
+- debug: var=download_url
 - debug: var=local_zip
 
 - file: path={{ item }} state=absent
@@ -50,7 +37,7 @@
 
 - name: Download Packer
   get_url:
-    url:   "{{ url }}"
+    url:   "{{ download_url }}"
     dest:  "{{ local_zip }}"
     force: "{{ packer.redownload }}"
 
@@ -77,7 +64,9 @@
 - stat: path="{{ packer.dir }}/packer-packer"
   register: packer_packer_src_bin
 
-- assert:  { that: "packer_src_bin.stat.exists or packer_packer_src_bin.stat.exists" }
+- assert:
+    that:
+      - packer_src_bin.stat.exists or packer_packer_src_bin.stat.exists
 
 - file:
     src:   "{{ packer.dir }}/packer"
