--- a/playbooks/packer-ubuntu.yml
+++ b/playbooks/packer-ubuntu.yml
@@ -12,12 +12,11 @@
 
   roles:
     - { role: periodic-before, period: "{{ 24 * 3600 }}" }
-    # - { role: base,       when: periodic }
-    # - { role: ansible,    when: periodic }
-    # - { role: docker,     when: "( periodic|bool and ( not is_docker|bool ))" }
-    # - { role: vagrant,    when: periodic }
-    # - { role: virtualbox, when: periodic }
-    # - { role: ruby,       when: periodic }
-    - ruby
+    - { role: base,       when: periodic }
+    - { role: ansible,    when: periodic }
+    - { role: docker,     when: "( periodic|bool and ( not is_docker|bool ))" }
+    - { role: vagrant,    when: periodic }
+    - { role: virtualbox, when: periodic }
+    - { role: ruby,       when: periodic }
     - packer
     - periodic-after
