--- a/playbooks/vars/Ubuntu.yml
+++ b/playbooks/vars/Ubuntu.yml
@@ -5,5 +5,6 @@ ubuntu: {
   init_dir:  /etc/init.d,
   log_dir:   /var/log,
   pid_dir:   /var/run,
-  envs_dir:  /etc/profile.d # https://help.ubuntu.com/community/EnvironmentVariables
+  envs_dir:  /etc/profile.d, # http://goo.gl/ksHX6N
+  sudoers:   /etc/sudoers
 }
