Ruby role - sudoers file is updated (5)

--- a/playbooks/roles/ruby/tasks/main.yml
+++ b/playbooks/roles/ruby/tasks/main.yml
@@ -29,13 +29,17 @@
 
 - name:     "Install Ruby"
   command:  "{{ rvm }} install '{{ ruby_version }}'"
-# https://help.ubuntu.com/community/EnvironmentVariables#sudo_caveat
+
+# http://unix.stackexchange.com/a/83194/39046
+# https://docs.python.org/2/library/re.html
 - name:   Update sudoers files
   lineinfile:
     dest:     "{{ ubuntu.sudoers }}"
-    regexp:   '^(Defaults\s+secure_path=)"(.+)"$'
+    regexp:   '^(Defaults\s+secure_path=)"(.+(?!ruby))"$'
     line:     '\1"\2:{{ ruby_bin }}"'
     backrefs: yes
+    backup:   yes
+    validate: 'visudo -cf %s'
 - name:   Update PATH
   template:
     src:  ruby.sh
