--- a/playbooks/roles/ruby/tasks/main.yml
+++ b/playbooks/roles/ruby/tasks/main.yml
@@ -35,7 +35,7 @@
 - name:   Update sudoers files
   lineinfile:
     dest:     "{{ ubuntu.sudoers }}"
-    regexp:   '^(Defaults\s+secure_path=)"(.+(?!ruby))"$'
+    regexp:   '^(Defaults\s+secure_path=)"(.+(?!{{ ruby_bin }}))"$'
     line:     '\1"\2:{{ ruby_bin }}"'
     backrefs: yes
     backup:   yes
