Ruby role - sudoers file is updated (7)

--- a/playbooks/roles/ruby/tasks/main.yml
+++ b/playbooks/roles/ruby/tasks/main.yml
@@ -35,7 +35,7 @@
 - name:   Update sudoers files
   lineinfile:
     dest:     "{{ ubuntu.sudoers }}"
-    regexp:   '^(Defaults\s+secure_path=)"(.+(?!{{ ruby_bin }}))"$'
+    regexp:   '^(Defaults\s+secure_path=)"((?!ruby).)+"$'
     line:     '\1"\2:{{ ruby_bin }}"'
     backrefs: yes
     backup:   yes
