--- a/playbooks/roles/ruby/tasks/main.yml
+++ b/playbooks/roles/ruby/tasks/main.yml
@@ -32,10 +32,11 @@
 
 # http://unix.stackexchange.com/a/83194/39046
 # https://docs.python.org/2/library/re.html
+# http://stackoverflow.com/a/406408/472153
 - name:   Update sudoers files
   lineinfile:
     dest:     "{{ ubuntu.sudoers }}"
-    regexp:   '^(Defaults\s+secure_path=)"((?!ruby).)+"$'
+    regexp:   '^(Defaults\s+secure_path=)"((?!ruby).)*"$'
     line:     '\1"\2:{{ ruby_bin }}"'
     backrefs: yes
     backup:   yes
